# memecho-skills

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.1.md  RELEASE_NOTES_1.0.2.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml  validate.yml
docs/: cli-guide.md  use-cases.md  user-guide.md
examples/: meeting-transcript.txt  monologue.txt  report-text-only.html  report-text-only.md  request-meeting.json  result-text-only.json
scripts/: build_release.py
skills/memecho-analyze-conversation/: SKILL.md
skills/memecho-analyze-conversation/agents/: openai.yaml
skills/memecho-analyze-conversation/references/: analysis-policy.md  cli-interface.md  coaching-mode.md  input-contract.md  output-contract.md  platform-adapters.md  report-rendering.md
skills/memecho-analyze-conversation/scripts/: validate_contract.py
src/memecho_cli/: __init__.py  cli.py  rendering.py  validation.py
tests/: test_contracts.py  test_release.py  test_rendering.py
